material-number-select.css
/* Material Number Select -- v0.3.1 -- https://github.com/jsejcksn/material-number-select/ */

body {
  height: 100%;
}

.no-scroll {
  height: 0;
  overflow: hidden;
  width: 0;
}

.mdl-number-select-input {
  background-color: #efefef;
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

.mdl-number-select-input-cancel {
  background-color: #cc0000;
  color: #efefef;
  height: 64px;
}

.mdl-number-select-input-option {
  height: 64px;
}

